tests/cases/attributes/errors/attribute-repr-own-field.ari
@repr(C)
struct OwnerSlot {
  value: own i64,
}

fn main() -> i64 {
  return 0;
}
